tests/pass/unary-operator.virtue
a = -2 + -(10 + 20)
b = ~(2 ^ ~1)
c = not (not (not false))
print "{a} {b} {c}"

# -32 3 1
